--- a/assignment1/homepage.css
+++ b/assignment1/homepage.css
@@ -49,7 +49,7 @@ button{
     width: 1600px;
     height: 120px;
     /* padding-top: 35px; */
-    margin-bottom:-10px;
+    /* margin-bottom:-10px; */
     display: flex;
     align-items: center;
     /* border-style: solid;
@@ -250,6 +250,8 @@ button{
 #priceSec{
     width: 1600px;
     height: 750px;
+    border-style: dotted;
+    border-color: red;
     /* filter: grayscale(100%); */
     /* padding-top: 5%;*/
 }
@@ -388,10 +390,12 @@ button{
 #tryFreeSec{
     width: 1600px;
     background: url(./resources/images/notebook.jpg) no-repeat;
-    background-position: 0px -287px;
+    /* background-position: 0px -287px; */
     height: 480px;
     background-size: cover;
     text-align: center;
+    border-style: solid;
+    border-color: black;
 }
 
 #tryFreeMask{
