--- a/assignment1/homepage.css
+++ b/assignment1/homepage.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
     padding: 0;
     /* border-right: 1px solid red; */
-    border-top: none;
+    /* border-top: none; */
 }
 
 /* // <uniquifier>: Use a unique and descriptive class name
