--- a/assignment1/homepage.css
+++ b/assignment1/homepage.css
@@ -260,7 +260,7 @@ button{
     content: "";
     z-index: -1;
     position: absolute;
-    height: 100%;
+    height: 750px;
     width: 1600px;
     background-image: url(./resources/images/glasses.png);
     background-repeat: no-repeat;
