--- a/assignment1/homepage.css
+++ b/assignment1/homepage.css
@@ -250,10 +250,8 @@ button{
 #priceSec{
     width: 1600px;
     height: 750px;
-    border-style: dotted;
-    border-color: red;
-    /* filter: grayscale(100%); */
-    /* padding-top: 5%;*/
+    /* border-style: dotted;
+    border-color: red; */
 }
 
 #priceSec::before{
@@ -272,7 +270,6 @@ button{
 #priceMask{
     width: 100%;
     height: 100%;
-    /* opacity: 0.5; */
     background-color: rgba(245, 245, 245, 0.8);
 }
 
@@ -394,8 +391,8 @@ button{
     height: 480px;
     background-size: cover;
     text-align: center;
-    border-style: solid;
-    border-color: black;
+    /* border-style: solid;
+    border-color: black; */
 }
 
 #tryFreeMask{
