--- a/assignment2/static/homepage.css
+++ b/assignment2/static/homepage.css
@@ -6,28 +6,33 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #e6e6e6;
 }
 
 .better-blue {
-    color: #3f51b5;
+    color: #4f6fad;
 }
 
 .better-bg-blue {
-    background-color: #3f51b5;
+    background-color: #4f6fad;
 }
 
 .better-orange {
-    color: darkorange;
+    color: #feb605;
 }
 
 .better-bg-orange {
-    background-color: darkorange;
+    background-color: #feb605;
 }
 
 .flex-row {
     display: flex;
     flex-direction: row;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
 }
 
 .flex-space-between {
@@ -52,9 +57,7 @@ body {
     width: 600px;
     height: 450px;
     background-color: #fff;
-
     margin-top: 50px;
-
     border-color: lightgray;
     border-style: solid;
     border-width: 2px;
@@ -72,13 +75,14 @@ body {
 }
 
 .form-title-box-l1 {
-    color: #666666;
+    color: #58595a;
     margin-top: 8px;
     margin-bottom: 20px;
 }
 
 .form-title-box-l2 {
     font-weight: normal;
+    color: #5a5b5b;
 }
 
 .form-body-box {
@@ -170,7 +174,7 @@ button {
     width: 115px;
     height: 45px;
     color: #fff;
-    box-shadow: 0px 3px blue;
+    box-shadow: 0px 3px #384d78;
 }
 
 .clear-btn {
@@ -179,7 +183,7 @@ button {
     width: 100px;
     height: 45px;
     color: #fff;
-    box-shadow: 0px 3px orange;
+    box-shadow: 0px 3px #fc8800;
 }
 
 button:hover {
@@ -190,7 +194,7 @@ button:hover {
     display: none;
 }
 
-#error-box{
+#error-box {
     display: none;
     margin: -30px auto;
     padding: 8px;
@@ -218,13 +222,16 @@ button:hover {
     /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);*/
 }
 
+#results-today-box {
+    display: block;
+}
+
 .results-today-box {
     height: 460px;
     width: 50%;
     background-color: #fff;
     padding: 15px 30px 20px 30px;
     margin: 0px auto;
-    margin-bottom: 50px;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -235,7 +242,7 @@ button:hover {
 .location {
     font-size: 30px;
     font-weight: lighter;
-    color: #666;
+    color: #878787;
     margin-bottom: 20px;
 
 }
@@ -261,7 +268,7 @@ button:hover {
 
 .weather-status-main p {
     font-size: 22px;
-    color: gray;
+    color: #878787;
 }
 
 .weather-img-main {
@@ -272,7 +279,7 @@ button:hover {
 .temperature-font {
     font-size: 125px;
     font-weight: 100;
-    color: gray;
+    color: #878787;
 }
 
 .details-main {
@@ -288,7 +295,7 @@ button:hover {
 
 .detail-item-main p {
     font-size: 17px;
-    color: #666;
+    color: #878787;
     margin-bottom: 5px;
 }
 
@@ -312,7 +319,7 @@ button:hover {
 
 .tableContainer {
     width: 70%;
-    margin: 0 auto;
+    margin: 50px auto 0;
 }
 
 #tableHidden {
@@ -323,8 +330,8 @@ table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0px 0px;
-    border-left: 1px solid #f5f5f5;
-    border-right: 1px solid #f5f5f5;
+    border-left: 1px solid #e6e6e6;
+    border-right: 1px solid #e6e6e6;
     background-color: #fff;
 }
 
@@ -337,7 +344,7 @@ tr {
 th, td {
     padding: 15px;
     text-align: center;
-    border-bottom: 1px solid #f5f5f5;
+    border-bottom: 1px solid #e6e6e6;
 }
 
 th {
@@ -353,38 +360,207 @@ td img {
 
 td {
     color: #333;
-    border-top: 10px solid #f5f5f5;
+    border-top: 10px solid #e6e6e6;
     height: 90px;
 }
 
 #weatherDetails {
+    /*display: none;*/
+    /*margin: 20px 0;*/
+    /*padding: 20px;*/
+    /*border: 1px solid #ddd;*/
+    /*box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);*/
+    /*background-color: #f9f9f9;*/
+}
+
+.weather-details-container {
     display: none;
-    margin: 20px 0;
-    padding: 20px;
-    border: 1px solid #ddd;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    background-color: #f9f9f9;
+    width: 1600px;
+    /*margin: 10px auto;*/
+    /*background-color: #f5f5f5;*/
+    text-align: center;
+}
+
+.detail-title-box {
+    text-align: center;
+    align-items: center;
+    display: inline-block;
+    margin: 0px auto;
+    padding: 10px 50px 10px 50px;
+}
+
+.weather-detail-font {
+    text-align: center;
+    font-size: xxx-large;
+    font-weight: 100;
+}
+
+.detail-hr {
+    width: 100%;
+    border: none;
+    border-top: 2px solid white;
+    margin-top: 20px;
 }
 
 .weather-card {
-    background: linear-gradient(to bottom, #f0f4ff, #a3b4f2);
-    padding: 20px;
-    border-radius: 10px;
+    background: linear-gradient(to bottom, #fefdfe, #384d78);
+    width: 600px;
+    margin: 25px auto 50px auto;
+    padding: 35px 20px 35px 20px;
     text-align: left;
     color: #333;
 }
 
-.weatherDetails {
-    margin: 10px auto;
+.card-head {
+    width: 560px;
+    height: 200px;
 }
 
-.weatherDetailFont {
-    text-align: center;
+.card-head-data {
+    font-size: larger;
+}
+
+.card-head-font1 {
+    font-size: 28px;
+    color: #384d78;
+}
+
+.card-head-font2 {
+    font-size: 36px;
+    color: #384d78;
+}
+
+#card-head-img {
+    width: 180px;
+    height: 180px;
+}
+
+.card-body {
+    display: grid;
+    grid-template-columns: 275px auto; /* 第一列固定宽度，第二列自适应 */
+    gap: 5px; /* 设置列之间的间距 */
+}
+
+.card-body div {
+    color: white;
+    font-weight: bold;
+    font-size: larger;
+}
+
+.data-label {
+    text-align: right;
+    margin-bottom: 10px;
+}
+
+.data-value {
+    text-align: left;
 }
 
 #pointDown {
     /*width: 50px;*/
     height: 50px;
-    display: grid;
-    place-items: center;
+    margin: 0 auto;
+}
+
+#charts-display {
+    display: none;
+}
+
+.highcharts1-figure,
+.highcharts1-data-table table {
+    min-width: 310px;
+    max-width: 1000px;
+    margin: 1em auto;
+}
+
+#highcharts1-container {
+    height: 400px;
+}
+
+.highcharts1-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #ebebeb;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+
+.highcharts1-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+
+.highcharts1-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
+
+.highcharts1-data-table td,
+.highcharts1-data-table th,
+.highcharts1-data-table caption {
+    padding: 0.5em;
+}
+
+.highcharts1-data-table thead tr,
+.highcharts1-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+
+.highcharts1-data-table tr:hover {
+    background: #f1f7ff;
+}
+
+
+#highcharts2-container {
+    max-width: 1000px;
+    min-width: 380px;
+    height: 400px;
+    margin: 0 auto;
+}
+
+.highcharts2-figure,
+.highcharts2-data-table table {
+    min-width: 350px;
+    max-width: 1000px;
+    height: 400px;
+    margin: 50px auto 100px;
+}
+
+.highcharts2-data-table table {
+    font-family: Verdana, sans-serif;
+    border-collapse: collapse;
+    border: 1px solid #ebebeb;
+    margin: 10px auto;
+    text-align: center;
+    width: 100%;
+    max-width: 500px;
+}
+
+.highcharts2-data-table caption {
+    padding: 1em 0;
+    font-size: 1.2em;
+    color: #555;
+}
+
+.highcharts2-data-table th {
+    font-weight: 600;
+    padding: 0.5em;
+}
+
+.highcharts2-data-table td,
+.highcharts2-data-table th,
+.highcharts2-data-table caption {
+    padding: 0.5em;
+}
+
+.highcharts2-data-table thead tr,
+.highcharts2-data-table tr:nth-child(even) {
+    background: #f8f8f8;
+}
+
+.highcharts2-data-table tr:hover {
+    background: #f1f7ff;
 }
